@@ -33,22 +33,12 @@ namespace logger {
     }
 
     void sink::set_log_level(log_levels level) {
-#if __cplusplus >= 201703L
-        std::unique_lock lock(_shared_mutex);
-#else
-        std::unique_lock lock(_mutex);
-#endif
         _level = level;
     };
 
     /** @return niveau courrant de journalisation
      */
     log_levels sink::level() {
-#if __cplusplus >= 201703L
-        std::shared_lock lock(_shared_mutex);
-#else
-        std::unique_lock lock(_mutex);
-#endif
         return _level;
     };
 
